--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   margin-left: 2rem;
   margin-right: 2rem;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
-}
+} */
 
 .dark {
   background-color: #1E1E1E;
