--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter", sans-serif;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
